{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 26,
  "lineage": "e4a4d6d5-90f8-0cf0-a024-0f4e5bf94a57",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "max-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.124.213.170",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "Terraform-RG",
            "sku": "Basic",
            "tags": {
              "environment": "Max-dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkInterfaces/max-nic",
            "internal_domain_name_suffix": "5c1wokstdvnebl2h5whbqvqhsd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.192.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
                "subnet_id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/matt-vnet/subnets/main-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-4A-83-9B",
            "name": "max-nic",
            "private_ip_address": "10.192.1.4",
            "private_ip_addresses": [
              "10.192.1.4"
            ],
            "resource_group_name": "Terraform-RG",
            "tags": {
              "environment": "Max-dev"
            },
            "virtual_machine_id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Compute/virtualMachines/max-vm"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.RG",
            "azurerm_subnet.matt-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/max-nsg",
            "location": "westeurope",
            "name": "max-nsg",
            "resource_group_name": "Terraform-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "max-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Max-dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/max-nsg/securityRules/max-dev-rule",
            "name": "max-dev-rule",
            "network_security_group_name": "max-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Terraform-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.124.213.170",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "Terraform-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Max-dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "matt-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.192.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/matt-vnet/subnets/main-subnet",
            "name": "main-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Terraform-RG",
            "virtual_network_name": "matt-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/matt-vnet/subnets/main-subnet",
            "network_security_group_id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/max-nsg",
            "subnet_id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/matt-vnet/subnets/main-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.RG",
            "azurerm_subnet.matt-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.192.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2a67b7f8-1d53-405a-af87-fd8e18560793",
            "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/matt-vnet",
            "location": "westeurope",
            "name": "matt-vnet",
            "resource_group_name": "Terraform-RG",
            "subnet": [
              {
                "address_prefix": "10.192.1.0/24",
                "id": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/matt-vnet/subnets/main-subnet",
                "name": "main-subnet",
                "security_group": "/subscriptions/9b0350e5-c278-4c77-a297-2c4d1a3254fe/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/max-nsg"
              }
            ],
            "tags": {
              "environment": "Max-dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}